@@ -1,3 +1,7 @@
+2008-02-01  Akira TAGOH  <tagoh@redhat.com>
+
+	* POTFILES.in: Update.
+
 2007-09-25  Akira TAGOH  <tagoh@redhat.com>
 
 	* bg.po: Update Bulgarian translation from Doncho N. Gunchev.
